Add rundep on dcd

--- a/package.yml
+++ b/package.yml
@@ -1,6 +1,6 @@
 name       : serve-d
 version    : 0.8.0.14
-release    : 2
+release    : 3
 source     :
     - git|https://github.com/Pure-D/serve-d.git : 482c054f978e8e192bdc2cb343efee7ca52963e7
 license    : MIT
@@ -12,6 +12,8 @@ networking : yes
 builddeps  :
     - dub
     - ldc-devel
+rundeps    :
+    - dcd
 build      : |
     dub build --build=release-debug --parallel
 install    : |
